--- a/Pictures.qmd
+++ b/Pictures.qmd
@@ -1,18 +1,15 @@
 ---
-title: "Pictures"
-format:
-  html:
-    code-fold: true
-self-contained: true
+page-layout: full
+listing:
+  id: listing-gallery
+  template: gallery.ejs
+  contents:
+    - www/*.JPG
+  sort-ui: false
+  filter-ui: false
+  categories: false
 ---
 
-::: {.carousel-container}
-
-<div class="image-carousel">
-  <img src="www/beaverswimming.JPG" alt="Beaver Swimming, Seattle">
-  <img src="www/beaverlilypad.JPG" alt="Beaver eating a lilypad, Seattle">
-  <img src="www/howlermonkey.JPG" alt="Howler Monkey, Costa Rica">
-  <!-- Add more images as needed -->
-</div>
-
+::: {#listing-gallery}
 :::
+
